--- a/serenity.properties
+++ b/serenity.properties
@@ -26,8 +26,8 @@ appium.hub = http://localhost:4723/wd/hub
 ####### Android CAPS ######
 appium.automationName=uiautomator2
 appium.platformName = Android
-appium.platformVersion = 11.0
-appium.deviceName  = AutomationTesting
+appium.platformVersion = 13.0
+appium.deviceName  = Pixel 7 Pro API 33
 appium.app = C:\\Users\\usuario acer\\Documents\\Curso Appium - Serenity BDD\\Appium-SerenityBDD-Cucumber-SauceLabs\\src\\test\\resources\\Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
 appium.appWaitForLaunch = false
 appium.noReset = true
